# emsim

./: .gitignore  CMakeLists.txt  README.md  optional-requirements.txt  pyproject.toml  requirements.txt  setup.py  setup_with_exts.py
cmake/Modules/: FindFFTW.cmake
cppExtension/: CMakeLists.txt
cppExtension/src/: SliceBuilder.cpp  SliceBuilder.h  WavePropagator.cpp  WavePropagator.h  common.h  dens_kernel.c  dens_kernel.cpp  dens_kernel.h  dens_kernel_pymodule.c  em_kernel.cpp  utils.h
cudaExtension/: CMakeLists.txt
cudaExtension/src/: SliceBuilder.cu  SliceBuilder.h  SliceBuilder_kernel.cu  SliceBuilder_kernel.h  WavePropagator.cu  WavePropagator.h  WavePropagator_kernel.cu  WavePropagator_kernel.cuh  common.cu  dens_kernel_cuda.cpp  em_kernel_cuda.cpp  utils.cu  utils.h
demos/: five_atoms.py  proteins.py  wpo.py
demos/images/: LetterA.npy
emsim/: __init__.py  array.py  atom.py  atom_list.py  atoms.py  back_end.py  biomolecule.py  config.py  dens.py  elem.py  em.py  physics.py  pip_gpu.py  pipe.py  pot.py  rotation.py  simulator.py  tem.py  wave.py
emsim/backend/: slice_builder_base.py  slice_builder_cpp.py  slice_builder_cuda.py  slice_builder_fftw.py  slice_builder_numpy.py  wave_propagator_base.py  wave_propagator_cuda.py  wave_propagator_fftw.py  wave_propagator_numpy.py
emsim/backend/cuda_ext/: CMakeLists.txt
emsim/backend/cuda_ext/src/: SliceBuilder.cu  SliceBuilder.h  SliceBuilder_kernel.cu  SliceBuilder_kernel.h  WavePropagator.cu  WavePropagator.h  WavePropagator_kernel.cu  WavePropagator_kernel.cuh  common.cuh  dens_kernel_cuda.cpp  em_kernel_cuda.cpp  slice_kernel_cuda.cpp  utils.cu  utils.h  wave_kernel_cuda.cpp
emsim/backend/fftw_ext/: CMakeLists.txt
emsim/backend/fftw_ext/src/: SliceBuilder.cpp  SliceBuilder.h  WavePropagator.cpp  WavePropagator.h  common.h  dens_kernel.cpp  em_kernel.cpp  slice_kernel.cpp  wave_kernel.cpp
emsim/ext/: CMakeLists.txt  __init__.py
emsim/ext/cusrc/: dens_kernel_cuda.c  dens_kernel_cuda.cu  dens_kernel_cuda.h  dens_kernel_cuda.pyx  em_kernel.cu  em_kernel_cuda.c  em_kernel_cuda.pyx
emsim/ext/lib_x86_64-win32/: libfftw3-3.lib  libfftw3f-3.lib  libfftw3l-3.lib
emsim/ext/src/: def.h  dens_kernel.c  dens_kernel.cu  dens_kernel.cuh  dens_kernel.h  dens_kernel_cuda_pymodule.c  dens_kernel_pymodule.c  em_kernel.c  em_kernel.h  em_kernel_pymodule.c  utils.c  utils.h
emsim/ext/src/cuda/: broadCast.cu  broadCast.cuh  broadcast_mul.cu  dens_kernel.cu  dens_kernel.cuh  em_kernel.cu  rowReduceSum.cu  rowReduceSum.cuh
emsim/ext_cuda/: CMakeLists.txt  __init__.py
emsim/ext_cuda/cusrc/: broadcast_mul.cu  broadcast_mul.cuh  dens_kernel_cuda.cu  em_kernel_cuda.cu  em_kernel_cuda.h  row_reduce_sum.cuh
emsim/ext_cuda/cython_src/: em_kernel_cuda.cpp  em_kernel_cuda.h  em_kernel_cuda.pyx
emsim/ext_cuda/src/: SliceBuilder.cpp  SliceBuilder.h  SliceBuilder_kernel.cu  dens_kernel_cuda.cpp  dens_kernel_cuda.cu  em_kernel_cuda.cu
emsim/extensions/: dens_kernel.cp38-win_amd64.exp  dens_kernel.cp38-win_amd64.lib
emsim/extensions/src/: dens_kernel.c  dens_kernel_pymodule.c  utils.c  utils.h
emsim/io/: __init__.py  config_file.py  data_dir.py  define.py
emsim/preset/: random_orientations.py
emsim/utils/: __init__.py  array.py  pdb.py  rot.py
fftwExtension/: CMakeLists.txt
fftwExtension/src/: SliceBuilder.h  WavePropagator.cpp  dens_kernel.cpp  em_kernel.cpp
sim/: atom.py
sim/assets/: atom_params.txt
test/: atom_list_test.py  atom_test.py  atoms_test.py  demo.py  demo_low.py  demo_wpo.py  dens_test.py  elem_test.py  em_test.py  pdb_test.py  physics_test.py  pipe_test.py  rotation_test.py  simulator_test.py
